add google verification

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="logo-small.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="m8wtYSdWTpUYxN-KyFrg1EHJj0hBRnpJQwjH0pFQx_E" />
     <title>Marketplace app</title>
   </head>
   <body>
