--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -13,20 +13,5 @@
 
 
 
-  </body>
-</html> -->
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/my-app/logo-small.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Marketplace app</title>
-    <link rel="stylesheet" href="/my-app/assets/index.abc123.css" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/my-app/assets/index.def456.js"></script>
   </body>
 </html>
